<resources>
    <string name="app_name">Rupeefy</string>

    <string name="otp_title">Please enter the 6 digit verification code sent to</string>
    <string name="otp_button_text">VERIFY</string>
    <string name="resend_msg">Did not receive the OTP? </string>
    <string name="resend_again_msg"> Resend OTP</string>
    <string name="sent_to_91_xxxx_xxx">sent to</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="country_code">+91-</string>
    <string name="phone_no_hint">9898454545</string>
    <string name="get_otp">GET OTP</string>

    <string name="rent">Rent</string>
    <string name="travel">Travel</string>
    <string name="shopping">Shopping</string>
    <string name="repair">Repair</string>
    <string name="fuel">Fuel</string>
    <string name="food">Food</string>
    <string name="health">Health</string>
    <string name="sports">Sports</string>

    <string name="income">Income</string>
    <string name="expense">Expense</string>

    <string name="rupee_symbol">\u20B9</string>

    <string name="balance">Balance: \u20B9</string>

    <string name="select_date">Select Date</string>

    <string name="add_transaction">Add Transaction</string>
    <string name="category">Category:</string>
    <string name="description">Description:</string>
    <string name="date">Date:</string>
    <string name="amount">Amount:</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="plus">+</string>
    <string name="minus">-</string>

    <string name="version">Version 1.0.0</string>
    <string name="title_activity_nav_drawer">NavDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation Header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="hello_blank_fragment">Hello Blank Fragment</string>

</resources>