<?xml version="3.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <TextView
        android:id="@+id/tv_add_transaction_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/sourcesanspro_semibold"
        android:text="@string/add_transaction"
        android:textColor="@color/colorItem5"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_category_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_add_transaction_3"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/sourcesanspro_semibold"
        android:text="@string/category"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_shopping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_add_transaction_3"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/sourcesanspro_semibold"
        android:text="@string/shopping"
        android:textColor="@color/colorItem5"
        android:textSize="16sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/iv_shopping"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_below="@id/tv_add_transaction_3"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="48dp"
        android:src="@drawable/ic_grocery" />

    <TextView
        android:id="@+id/tv_description_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_category_3"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/sourcesanspro_semibold"
        android:text="@string/description"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_description_3"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_category_3"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="75dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_date_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_description_3"
        android:layout_gravity="center"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/sourcesanspro_semibold"
        android:text="@string/date"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_date_3"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_description_3"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="18dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:hint="@string/select_date"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_amount_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_date_3"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/sourcesanspro_semibold"
        android:text="@string/amount"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_amount_3"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_date_3"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:inputType="number"
        android:text="@string/rupee_symbol"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_cancel_3"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_below="@id/tv_amount_3"
        android:layout_gravity="center"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/round_button"
        android:backgroundTint="#ff4c4c"
        android:fontFamily="@font/sourcesanspro_semibold"
        android:text="@string/cancel"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_add_3"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_below="@id/tv_amount_3"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/sourcesanspro_semibold"
        android:text="@string/add"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:alpha="0.2" />

</RelativeLayout>