<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:overScrollMode="never"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_varify"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/varify" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/otp_title"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textMobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/otp_et_1"
                android:layout_width="@dimen/et_otp_width"
                android:layout_height="@dimen/et_otp_height"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:maxLength="1" />

            <EditText
                android:id="@+id/otp_et_2"
                android:layout_width="@dimen/et_otp_width"
                android:layout_height="@dimen/et_otp_height"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:maxLength="1" />

            <EditText
                android:id="@+id/otp_et_3"
                android:layout_width="@dimen/et_otp_width"
                android:layout_height="@dimen/et_otp_height"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:maxLength="1" />

            <EditText
                android:id="@+id/otp_et_4"
                android:layout_width="@dimen/et_otp_width"
                android:layout_height="@dimen/et_otp_height"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:maxLength="1" />

            <EditText
                android:id="@+id/otp_et_5"
                android:layout_width="@dimen/et_otp_width"
                android:layout_height="@dimen/et_otp_height"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:maxLength="1" />

            <EditText
                android:id="@+id/otp_et_6"
                android:layout_width="@dimen/et_otp_width"
                android:layout_height="@dimen/et_otp_height"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:maxLength="1" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_verify"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="80dp"
                android:background="@drawable/round_button"
                android:text="VERIFY"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:visibility="gone" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_didnt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resend_msg" />

            <TextView
                android:id="@+id/tv_resend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/resend_again_msg"
                android:textColor="@color/purple_700"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>